# POS_semestralna_praca

./: CMakeLists.txt  Makefile  main.cpp
client/: client.cpp  client.h  main_client.cpp  main_client.h
logika/: bunka.h  game_of_life.cpp  game_of_life.h
server/: main_server.cpp  main_server.h  server.cpp  server.h
simulacia/: thread_data.cpp  thread_data.h
spravca/: file_handler.cpp  file_handler.h
